--- a/LandingPage/Index.html
+++ b/LandingPage/Index.html
@@ -19,9 +19,8 @@
         
         <header><!--Header-->
             <div class="leftPanel">
-                <h2 class="Logo"><span>CO</span>MS<span>.</span></h2>
-        
-                <div class="selected">Home</div>
+                <a href="/LandingPage/Index.html"><h2 class="Logo"><span>CO</span>MS<span>.</span></h2></a>
+                <a class="selected" href="/LandingPage/Index.html"><div>Home</div></a>
                 <a href="/LandingPage/Associations.html"><div>Associations</div></a>
             </div>
         </header><!--Header END-->
