Semi Finalization of Registration

--- a/LandingPage/Index.html
+++ b/LandingPage/Index.html
@@ -18,11 +18,11 @@
     <body>
         
         <header><!--Header-->
-            <div class="leftPanel">
+            <nav class="leftPanel">
                 <a href="/LandingPage/Index.html"><h2 class="Logo"><span>CO</span>MS<span>.</span></h2></a>
                 <a class="selected" href="/LandingPage/Index.html"><div>Home</div></a>
                 <a href="/LandingPage/Associations.html"><div>Associations</div></a>
-            </div>
+            </nav>
         </header><!--Header END-->
         <main>
             <div class="logincontainer">
