--- a/LandingPage/Associations.html
+++ b/LandingPage/Associations.html
@@ -17,11 +17,11 @@
     <body>
         
         <header><!--Header-->
-            <div class="leftPanel">
+            <nav class="leftPanel">
                 <a href="/LandingPage/Index.html"><h2 class="Logo"><span>CO</span>MS<span>.</span></h2></a>
                 <a href="/LandingPage/Index.html"><div>Home</div></a>
                 <a class="selected" href="/LandingPage/Associations.html"><div>Associations</div></a>
-            </div>
+            </nav>
         </header><!--Header END-->
         
         <main class="mainPage">
