--- a/LandingPage/Register.html
+++ b/LandingPage/Register.html
@@ -6,6 +6,7 @@
         <title>Registration</title>
         <link rel="stylesheet" href="/LandingPage/Styles/header-style.css">
         <link rel="stylesheet" href="/LandingPage/Styles/general-style.css">
+        <link rel="stylesheet" href="/LandingPage//Styles/register-style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,11 +14,43 @@
     </head>
     <body>
         <header><!--Header-->
-            <div class="leftPanel">
+            <nav class="leftPanel">
                 <a href="/LandingPage/Index.html"><h2 class="Logo"><span>CO</span>MS<span>.</span></h2></a>
                 <a href="/LandingPage/Index.html"><div>Home</div></a>
                 <a href="/LandingPage/Associations.html"><div>Associations</div></a>
-            </div>
+            </nav>
         </header><!--Header END-->
+   
+        <main>
+            <section class="registrationContainer">
+
+                <section class="leftSection">
+                    <img src="/Images/AssosiationsPfp/CodersPfp.jpg" alt="Logo">
+                    <div class="textSection">
+                        <h3>Association Name Association Name</h3>
+                        <p>Adivser:</p>
+                        <p>Total Members</p>
+                    </div>
+                </section>
+
+                <form>
+                    <h3>Application Form</h3>
+                    <input type="text" placeholder="First Name">   
+                    <input type="text" placeholder="Middle Name">                
+                    <input type="text" placeholder="Last Name">
+                    <input type="text" placeholder="Phone Number">
+                    <input type="text" placeholder="Email">
+                    <textarea placeholder="Address"></textarea>
+                    <button type="submit">Submit Application</button>
+                </form>
+            </section>
+
+            <section class="associationsMissionVision">   
+                <h3>~Mission~</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste magni quos illum non quibusdam excepturi cupiditate laborum mollitia veniam ipsum quasi repellat ipsa reprehenderit sequi voluptatem aut, consequuntur dignissimos minus!</p>
+                <h3>~Vision~</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde molestiae deleniti nulla inventore. Tempore at quo, culpa tempora distinctio molestiae, a et autem dolores libero corporis cupiditate vitae suscipit.</p>
+            </section>
+        </main>
     </body>
 </html>
