--- a/LandingPage/Associations.html
+++ b/LandingPage/Associations.html
@@ -35,7 +35,6 @@
 
         </main>
 
-        <script src="/LandingPage/SampleData/ClubData.js"></script>
-        <script src="/LandingPage/Scripts/script.js"></script>
+        <script type="module" src="/LandingPage/Scripts/Association.js"></script>
     </body>
 </html>
