--- a/LandingPage/Register.html
+++ b/LandingPage/Register.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/LandingPage/Styles/header-style.css">
         <link rel="stylesheet" href="/LandingPage/Styles/general-style.css">
         <link rel="stylesheet" href="/LandingPage//Styles/register-style.css">
+        <link rel="icon" href="/Images/WebLogo/CO (1).png" type="images/icon type">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,12 +26,7 @@
             <section class="registrationContainer">
 
                 <section class="leftSection">
-                    <img src="/Images/AssosiationsPfp/CodersPfp.jpg" alt="Logo">
-                    <div class="textSection">
-                        <h3>Association Name Association Name</h3>
-                        <p>Adivser:</p>
-                        <p>Total Members</p>
-                    </div>
+                    <!-- Render Here -->
                 </section>
 
                 <form>
@@ -47,10 +43,12 @@
 
             <section class="associationsMissionVision">   
                 <h3>~Mission~</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste magni quos illum non quibusdam excepturi cupiditate laborum mollitia veniam ipsum quasi repellat ipsa reprehenderit sequi voluptatem aut, consequuntur dignissimos minus!</p>
+                <p class="js-mission">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste magni quos illum non quibusdam excepturi cupiditate laborum mollitia veniam ipsum quasi repellat ipsa reprehenderit sequi voluptatem aut, consequuntur dignissimos minus!</p>
                 <h3>~Vision~</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde molestiae deleniti nulla inventore. Tempore at quo, culpa tempora distinctio molestiae, a et autem dolores libero corporis cupiditate vitae suscipit.</p>
+                <p class="js-vision">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde molestiae deleniti nulla inventore. Tempore at quo, culpa tempora distinctio molestiae, a et autem dolores libero corporis cupiditate vitae suscipit.</p>
             </section>
+
+            <script type="module" src="/LandingPage/Scripts/Register.js"></script>
         </main>
     </body>
 </html>
